[project]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "RoundBox"
version = "2022.4.22"
description = "A small lightweight framework for IoT applications"
authors = ["Zaharia Constantin <layout.webdesign@gmail.com>"]
license = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/soulraven/roundbox"
documentation = "https://soulraven.github.io/roundbox/"
keywords = [
  'roundbox',
  'template',
  'poetry'
]
packages = [
  {include = "RoundBox"}
]
include = [

]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mkdocs-material = ">=8.2.9"
mkdocs-coverage = "^0.2.5"
mkdocs-literate-nav = "^0.4.1"
mkdocs-gen-files = "^0.3.4"
mkdocs = "^1.3.0"
toml = "^0.10.2"
coverage = "^6.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
pytest-cookies = "^0.6.1"
tox = "^3.25.0"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"

[tool.poetry.extras]

[tool.poetry.plugins]

[tool.poetry.scripts]

[tool.poetry.urls]
"Source" = "https://github.com/soulraven/roundbox"
"Issues" = "https://github.com/soulraven/roundbox/issues"
"Discussions" = "https://github.com/soulraven/roundbox/discussions"
"Documentation" = "https://soulraven.github.io/roundbox/"

[tool.black]
skip-string-normalization = true
line_length = 99
target_version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \notebooks
    | .ipynb_checkpoints
    | __pycache__
    | data
    | logs
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.isort]
profile = "black"
