[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "RoundBox"
version = "1.0"
description = "A small lightweight framework for IoT applications"
authors = ["Zaharia Constantin <layout.webdesign@gmail.com>"]
license = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/soulraven/roundbox"
documentation = "https://soulraven.github.io/roundbox/"
keywords = [
  'roundbox',
  'template',
  'poetry'
]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: GPLv3 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
  {include = "RoundBox"}
]
include = [

]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
watchdog = ">=2.1.8; python_version >= 3.10"
colorama = ">=0.4.4; python_version >= 3.10"
slugify = "^0.0.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
pytest = "^7.1.1"
pytest-cookies = "^0.6.1"
tox = "^3.25.0"
toml = "^0.10.2"
coverage = "^6.4"
mkdocs = "^1.3.0"
mkdocs-material = ">=8.2.16"
mkdocs-coverage = "^0.2.5"
mkdocs-literate-nav = "^0.4.1"
mkdocs-gen-files = "^0.3.4"
mkdocs-material-extensions = "^1.0.3"
mkdocs-awesome-pages-plugin = ">=2.7.0"
mkdocs-autolinks-plugin = ">=0.5.0"
mkdocs-pagenav-generator = {git = "https://github.com/Andre601/mkdocs-pagenav-generator", branch = "main"}
pre-commit = "^2.19.0"

[tool.poetry.extras]
mkdocs = [
    "toml",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-coverage",
    "mkdocs-literate-nav",
    "mkdocs-gen-files",
    "mkdocs-material-extensions",
    "mkdocs-awesome-pages-plugin",
    "mkdocs-autolinks-plugin",
    "mkdocs-pagenav-generator"
]
lint = ["black", "isort"]
test = ["pytest", "pytest-cookies", "tox"]

[tool.poetry.plugins]

[tool.poetry.scripts]
roundbox-admin = "RoundBox.core.cliparser:exec_from_cli"

[tool.poetry.urls]
"Source" = "https://github.com/soulraven/roundbox"
"Issues" = "https://github.com/soulraven/roundbox/issues"
"Discussions" = "https://github.com/soulraven/roundbox/discussions"
"Documentation" = "https://soulraven.github.io/roundbox/"
"Releases" = "https://soulraven.github.io/roundbox/releases"

[tool.black]
line_length = 88
target_version = ['py310']
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.github
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \notebooks
    | .ipynb_checkpoints
    | __pycache__
    | data
    | logs
    | _build
    | buck-out
    | build
    | dist
    | snapshots
  )/
)
'''

[tool.isort]
py_version = 310
profile = "black"

[tool.flake8]
ignore = ['E231', 'E241']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 88
count = true
