[metadata]
name = RoundBox
author = Zaharia Constantin
author_email = progeekro@gmail.com
home_page = www.progeek.ro
url = https://github.com/soulraven/roundBox
description = Just a small framework inspired by Django and HomeAssistant
long_description = file: README.md
long_description_content_type = text/markdown
keywords = framework iot small
license = GPL, Version 2.0
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >= 3.9
packages = find:
test_suite = tests
setup_requires =
    setuptools
install_requires =
tests_require =
    pytest

[options.entry_points]
console_scripts =
    roundbox-admin = RoundBox.core.cliparser:exec_from_cli

[options.extras_require]
loguru =
    loguru
notifiers =
    notifiers
    sentry_sdk
all =
    loguru
    notifiers
    sentry_sdk

[flake8]
exclude = build,.git,.tox,./tests/.env
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[isort]
profile = black
