[metadata]
name = RoundBox
author = Zaharia Constantin
version = attr: RoundBox.__version__
url = https://github.com/soulraven/roundBox
author_email = constantin.zaharia@progeek.ro
description = Just a small framework inspired by Django and HomeAssistant used for IoT monitoring and automation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = framework iot small
license = GPLv3
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries'
    License :: OSI Approved :: GPLv3 License'
    Operating System :: OS Independent',
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries :: Python Modules
projects_urls =
    Source = https://github.com/soulraven/roundbox
    Issues = https://github.com/soulraven/roundbox/issues
    Discussions = https://github.com/soulraven/roundbox/discussions
    Documentation = https://soulraven.github.io/roundbox/
    Changelog = https://github.com/althonos/soulraven/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.10
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    poetry
    asgiref
    ciso8601
    colorama
    pip
    pywatchman
    PyYAML
    requests
    setproctitle
    unicode_slugify

[options.entry_points]
console_scripts =
    roundbox-admin = RoundBox.core.cliparser:exec_from_cli

[options.extras_require]
docs =
    mkdocs
    mkdocs-coverage
    mkdocs-gen-files
    mkdocs-literate-nav
    mkdocs-material
    mkdocs-material-extensions
tests =
    pytest
    pytest-cookies
lint =
    black
    isort
coverage =
    coverage
    pre-commit

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
# Recommend matching the black line length (default 88),
# rather than using the flake8 default of 79:
max-line-length = 88
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203
doctests = True

[isort]
profile = black
